css/index.css
/* ... */
@media screen and (min-width: 768px) {
  #contact .button a {
    padding: 0.2em 9.4rem 0.2em 2.6rem;
    min-width: 50rem;
    min-height: 7rem;
    font-size: 2.4rem;
  }
}
#contact .button a:hover {
  opacity: 1;
  background-position: 0 50%;
}
#contact .button a::before {
  content: "";
  margin: auto;
  display: inline-block;
  width: 1px;
  height: 2.5rem;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 5.2rem;
  background-color: currentColor;
}
@media screen and (max-width: 767px) {
  #contact .button a {
    width: 80vw;
    padding-right: 4rem;
  }
  #contact .button a::before {
    right: 7rem;
  }
}
@media screen and (min-width: 768px) {
  #contact .button a::before {
    height: 3.8rem;
    right: 7rem;
  }
}
#contact .button a::after {
  content: "";
  display: inline-block;
  width: 0;
  height: 0;
  border-left: calc(9 / 14.5 * 1em) solid currentColor;
  border-top: calc(6 / 14.5 * 1em) solid transparent;
  border-bottom: calc(6 / 14.5 * 1em) solid transparent;
}
#contact .button a:hover::after {
  -webkit-animation: arrow 0.4s ease;
  animation: arrow 0.4s ease;
}
#contact > .title {
  display: none;
}

